2002-12-07  Andras Varga

	* UI redesign -- uses iconic toolbar, tooltips, all bells and whistles

2002-10-29  Andras Varga

	* use combobox.tcl by Bryan Oakley

2002-05-04  ------ omnetpp-2.2 released ------

2001-08-30  Andras Varga

	* cosmetic changes; Plove 2.1p1 win32 binary bugfix release

2001-08-29  Andras Varga

	* doplot.tcl rewritten to handle Windows better. Fixed bugs associated
        with slashes/backslashes in filenames in batch files and tabs/spaces
        in vector files. New feature: can write Windows .bat file also, not
        only Unix shell script. (Restriction: awk-based filters aren't added
        correctly to the .bat files.)

2001-05-18  Andras Varga

	* ------ omnetpp-2.1 released ------

	* fixed a bug in startup code

	* Windows: added rc file with icon

2001-05-02  Andras Varga

	* fixed Help|README when using compiled-in Tcl code

	* geometry management improved

2001-04-28  Andras Varga

	* bugfix in .ploverc handling

2001-04-20  Andras Varga

	* bugfix in new WinMain() startup code

2001-04-19  Andras Varga

	* default config file added: before processing $HOME/.ploverc,
	also reads .ploverc from the Plove program dir

2001-04-16  Andras Varga

	* Plove can now be compiled as GUI application (not console app)
	on Windows, setting USE_WINMAIN=yes in configuser.vc.

	NOTE: main() and WinMain() use completely different startup
	sequences.  The reason: main()'s startup code with WinMain would
	result in an "unknown channel stdout" error in the Tcl code (and
	it's not so easy to create a dummy channel named stdout), while
	WinMain()'s startup sequence with main() would result in a working
	command prompt in the console window (!!!).  Pretty weird.

	* added plove.ico

	* window title

2001-04-03  Andras Varga

	* fix: the app window didn't acquire focus on startup (added
	deiconify command)

2001-03-24  Andras Varga

	* now you can build a single Plove executable, with all Tcl code